2011-04-25  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Timothy Hatcher.

        WebKit2: Web Inspector's style sidebar fails to display when inspecting element
        https://bugs.webkit.org/show_bug.cgi?id=58071
        <rdar://problem/9243093>
        
        When creating our WebKit2 inspector views, we were creating them on both Mac and Windows
        with the empty rect for their initial size. Before we sized them correctly, the inspector
        was calling window.innerWidth on them, which returned 0, making the sidebar take up 0 pixels.

        * UIProcess/mac/WebInspectorProxyMac.mm:
        (WebKit::WebInspectorProxy::platformCreateInspectorPage): Create the window with the initial window width
            and height.
        * UIProcess/win/WebInspectorProxyWin.cpp:
        (WebKit::WebInspectorProxy::platformCreateInspectorPage): Ditto.

2011-04-25  Brian Weinstein  <bweinstein@apple.com>

        Reviewed by Adam Roben.

        Windows part of - WebKit2: Support docked mode for Web Inspector
        https://bugs.webkit.org/show_bug.cgi?id=59134
        <rdar://problem/8739005>
        
        Implement attaching and detaching of the Web Inspector on Windows,
        and also support setAttachedWindowHeight when the user changes the height
        of the docked inspector.
        
        This patch doesn't remember whether the user prefers attached or detached, and
        doesn't remember the user's preferred docked height, but that will be a separate
        bug.
        
        * UIProcess/WebInspectorProxy.cpp:
        (WebKit::WebInspectorProxy::attach): Set the attached flag and call platform-specific code.
        (WebKit::WebInspectorProxy::detach): Ditto.
        (WebKit::WebInspectorProxy::setAttachedWindowHeight): Call platform-specific code.
        (WebKit::WebInspectorProxy::didClose): Set m_isVisible before calling platformClose. platformClose